--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+  firebase_core: 0.5.0
+  cloud_firestore: 0.14.0+2
+  firebase_auth: 0.18.0+1
+  firebase_storage: 4.0.0
+  image_picker: 0.6.7+11
+
+
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
